--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
-    <h1>MealUp</h1>
+    <nav>
+        <a routerLink="meals" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">MealUp</a>
+        <a routerLink="login" routerLinkActive="active">Login</a>
+        <a routerLink="sign-up" routerLinkActive="active">Sign-up</a>
+      </nav>
 </header>
