--- a/src/app/component/sign-up/sign-up.component.html
+++ b/src/app/component/sign-up/sign-up.component.html
@@ -3,7 +3,7 @@
         <form [formGroup]="signUpForm"
               autocomplete="off"
               novalidate
-              (ngSubmit)="signUp()">
+              (ngSubmit)="signup()">
             
               <!-- Email address -->
             <input
