--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,38 +1,47 @@
 <header>
-    <nav>
-        <a routerLink="meals" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">MealUp</a>
-        <!-- Login-->
-                <!-- #TODO: Write a condition to check if the login button should be displayed-->
-                <button
-                    *ngIf="!authService.getToken()"
-                    mat-raised-button
-                    routerLinkActive="active"
-                    routerLink="/login">
-                    Login
-                </button>
 
-                 <!-- Signup -->
-                 <!-- #TODO: Write a condition to check if the signup button should be displayed-->
-        <!-- Reset password-->
+    <div class="left-side">
+        <a routerLink="meals" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">MealUp</a>
+    </div>
+
+    <div class="right-side">
+        <!-- Login-->
+        <!-- #TODO: Write a condition to check if the login button should be displayed-->
         <button
-                    *ngIf="!authService.getToken()"
-                    mat-raised-button
-                    routerLinkActive="accent"
-                    routerLink="/sign-up"
-                    color="accent">
-                    Sign up
-                </button>
-        <button
-          *ngIf="authService.getToken()"
-          mat-raised-button 
-          color="accent"
-          routerLinkActive="active"
-          routerLink="/reset-password">
-          Reset password
+            class="header-button"
+            *ngIf="!authService.getToken()"
+            mat-raised-button
+            routerLinkActive="active"
+            routerLink="/login">
+            Login
         </button>
 
-        <!-- Log out-->
+        <!-- Signup -->
+        <!-- #TODO: Write a condition to check if the signup button should be displayed-->
         <button
+            class="header-button"
+            *ngIf="!authService.getToken()"
+            mat-raised-button
+            routerLinkActive="accent"
+            routerLink="/sign-up"
+            color="accent">
+            Sign-up
+        </button>
+
+        <!-- Reset Password-->
+        <button
+            class="header-button"
+            *ngIf="authService.getToken()"
+            mat-raised-button 
+            color="accent"
+            routerLinkActive="active"
+            routerLink="/reset-password">
+            Reset password
+        </button>
+
+        <!-- Log out -->
+        <button
+            class="header-button"
             *ngIf="authService.getToken()"
             mat-raised-button 
             color="accent"
@@ -40,5 +49,5 @@
             routerLinkActive="active">
             Log out
         </button>
-    </nav>
+    </div>
 </header>
