--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,6 +1,44 @@
 header {
     text-align: center;
-    background-color: #EEE;
-    margin-bottom: 20px;
-    padding: 10px;
+    display : flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 125px;
+    border-bottom: black 5px solid;
+}
+
+.left-side{
+    margin-left: 150px;
+    margin-top: 37.5px;
+    font-size: 35px;
+    text-decoration: underline;
+    text-decoration-thickness: 4px;
+    color : #720026;
+}
+
+.right-side{
+    margin-right: 150px;
+    margin-top: 37.5px;
+    font-size: 35px;
+    color : #FF7F51;
+}
+
+.header-button:hover{
+    text-decoration: underline;
+}
+
+button{
+    margin-left: 50px;
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+a {
+    color: inherit; /* blue colors for links too */
+    text-decoration: inherit; /* no underline */
 }
