finished front side for sign up and login pages

--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -1,75 +1,54 @@
 .form-card {
     box-sizing: border-box;
-    width: 50%;
+    width: 35%;
     margin: 20px auto;
     display: flex;
+    margin-top: 80px;
     flex-direction: column;
     box-shadow: lightgray 4px 4px 20px;
     border : lightgray 1px solid;
+    border-radius: 3%;
 }
 
 .form-title{
-    font-size: 30px;
+  margin-top: 20px;
+  font-size: 30px;
+  color : #111010;
 }
 
 .form-column{
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.form-field {
-    display: block;
-    margin-bottom: 20px;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-  }
-  
-  .form-field label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-  
-  .form-field input[type="text"],
-  .form-field input[type="email"],
-  .form-field input[type="password"],
-  .form-field textarea {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    color: #333;
-    font-size: 16px;
-    line-height: 1.5;
-    resize: none;
-  }
-  
-  .form-field input[type="text"]:focus,
-  .form-field input[type="email"]:focus,
-  .form-field input[type="password"]:focus,
-  .form-field textarea:focus {
-    outline: none;
-    border-color: #4CAF50;
-  }
+.form-field{
+  width: 40%;
+  height: 35px;
+  margin-top : 30px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  color: #333;
+  font-size: 16px;
+}
 
-  .button {
-    display: inline-block;
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    color: #333;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    background-color: #ccc;
-    color: #fff;
-  }
-  
+.submit {
+  display: inline-block;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #FFA464;
+  color: #111010;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 40%;
+}
+
+.submit:hover {
+  color: #fff;
+}
