--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -9,6 +9,6 @@
         <input class="form-control form-field" type="password" ngDefaultControl formControlName="password" required placeholder="Password" minlength="5">
 
         <!-- Button -->
-        <button type="submit">Login</button>
+        <button type="submit" class="submit">Login</button>
     </form>
 </div>
