--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -13,7 +13,7 @@ header {
     font-size: 35px;
     text-decoration: underline;
     text-decoration-thickness: 4px;
-    color : #720026;
+    color : #90254e;
 }
 
 .right-side{
