--- a/src/app/component/sign-up/sign-up.component.html
+++ b/src/app/component/sign-up/sign-up.component.html
@@ -1,45 +1,15 @@
-<h1 class="class-header">Sign-up</h1>
-    <div class="class-body">
-        <form [formGroup]="signUpForm"
-              autocomplete="off"
-              novalidate
-              (ngSubmit)="signup()">
-            
-              <!-- Email address -->
-            <input
-                class="form-control"
-                type="text"
-                ngDefaultControl
-                formControlName="email"
-                required
-                placeholder="Email Address"
-                minlength="5">
+<div class="form-card">
+    <span class="form-title">Sign-up</span>
 
-            <!-- Password -->
-                <input
-                class="form-control"
-                type="password"
-                ngDefaultControl
-                formControlName="password"
-                required
-                placeholder="Password"
-                minlength="5">
+    <form [formGroup]="signUpForm" autocomplete="off" novalidate (ngSubmit)="signup()" class="form-column">
+        <!-- Email address -->
+        <input class="form-control form-field" type="text" ngDefaultControl formControlName="email" required placeholder="Email Address" minlength="5">
 
-                <input
-                class="form-control"
-                type="password"
-                ngDefaultControl
-                formControlName="confirmPassword"
-                required
-                placeholder="Confirm Password"
-                minlength="5">
+        <!-- Password -->
+        <input class="form-control form-field" type="password" ngDefaultControl formControlName="password" required placeholder="Password" minlength="5">
+        <input class="form-control form-field" type="password" ngDefaultControl formControlName="confirmPassword" required placeholder="Confirm Password" minlength="5">
 
-            <!-- Button -->
-            <button
-                color="warn"
-                type="submit"
-            >
-            Sign-up
-            </button>
-        </form>
-    </div>
+        <!-- Button -->
+        <button color="warn" type="submit" class="submit">Sign-up</button>
+    </form>
+</div>
