--- a/src/app/component/add-meal/add-meal.component.css
+++ b/src/app/component/add-meal/add-meal.component.css
@@ -15,6 +15,7 @@ label {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
 }
 
 input {
@@ -26,7 +27,7 @@ textarea{
     resize: none;
     border-style: none;
     border-bottom: 1px solid black;
-    width: 500px;
+    width: 90%;
     height: 75px;
 }
 
