--- a/src/app/component/meal/meal.component.css
+++ b/src/app/component/meal/meal.component.css
@@ -18,6 +18,7 @@ img {
 
 h2 {
     margin-bottom: 15px;
+    text-decoration: underline;
 }
 
 p {
@@ -43,14 +44,40 @@ p {
     border-color: green;
 }
 
-.bottom-meal-card{
+.flex-meal-card{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.delete-button{
+.flex-form{
+    align-items: flex-end;
+}
+
+.right-button{
     border: none;
     background-color: transparent;
     cursor: pointer;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.edit-button{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+textarea{
+    resize: none;
+    border-style: none;
+    border-bottom: 1px solid black;
+    width: 90%;
+    height: 75px;
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+::placeholder{
+    opacity: 1;
 }
