fixed vouch + edit

--- a/src/app/component/add-meal/add-meal.component.html
+++ b/src/app/component/add-meal/add-meal.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="mealForm" novalidate (ngSubmit)="onSubmit()" class="meal-card">
+    <h2>Add a new meal</h2>
     <label>
       Meal :
       <input type="text" formControlName="meal" required="true">
