--- a/src/app/component/add-meal/add-meal.component.css
+++ b/src/app/component/add-meal/add-meal.component.css
@@ -11,7 +11,7 @@
 }
 
 label {
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -21,6 +21,7 @@ label {
 input {
     border-style: none;
     border-bottom: 1px solid black;
+    margin-top: 5px;
 }
 
 textarea{
@@ -32,5 +33,9 @@ textarea{
 }
 
 button {
-    margin-top: 10px;
+    margin-top: 20px;
+}
+
+h2{
+    text-decoration: underline;
 }
