--- a/src/app/component/add-meal/add-meal.component.html
+++ b/src/app/component/add-meal/add-meal.component.html
@@ -5,7 +5,7 @@
       <input type="text" formControlName="meal" required="true">
     </label>
     <label>
-      Recipe :
+      Quick Description :
       <textarea formControlName="description" required="true"></textarea>
     </label>
     <label>
